Compiler/tests/good/while1.nx
val x : int = 0;
while(x < 10)
{
    printn(x);
    
    x := x + 1;
}