Compiler/tests/bad/val2.nx
type t = [0 .. 10];

val x : int = t;
